css/contact.css
* {
  margin: 0;
  padding: 0;
}

body {
  display: grid;
  place-items: center;
  font-family: "Roboto", sans-serif;
  color: #282828;
}

#page_header {
  min-height: 10vh;
  width: 100%;
  display: grid;
  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
  place-items: center;
}

#page_logo {
  width: 50px;
  height: 50px;
}

#page_header > a {
  text-decoration: none;
  color: #282828;
}

#page_main {
  display: grid;
  min-height: 80vh;
  width: 80%;
  place-items: center;
  grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
}

.hero_section {
  display: grid;
  place-items: center;
}

.hero_section h3 {
  padding-bottom: 10px;
}

#store_hours {
  display: grid;
  place-items: center;
}

#google_map {
  border-top-left-radius: 50px;
  border-bottom-right-radius: 50px;
  width: 100%;
  height: 100%;
}

#page_footer {
  width: 100%;
  min-height: 10vh;
  display: grid;
  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
  place-items: center;
  font-size: 12px;
}

.footer_col button {
  padding: 3px 6px;
  font-size: 12px;
}

.footer_col a {
  text-decoration: none;
  color: #282828;
  padding: 3px;
}

